--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "i18next": "^20.3.0",
+    "i18next-browser-languagedetector": "^6.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-i18next": "^9.0.10",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
